# finscrapper

./: .gitignore  .replit  db.sqlite3  google_credentials.json  manage.py  manual_auth.py  pyproject.toml  replit.md  requirements.txt  setup_google_auth.py
attached_assets/: Pasted-import-httpx-import-logging-from-bs4-import-BeautifulSoup-logging-basicConfig-level-logging-INFO-f-1758082692255_1758082692256.txt  client_secret_23619380503-elqqt1ljq7hl5hbmsm22hco65ode3e91.apps.googleusercontent.com_1758210001951.json  client_secret_23619380503-h5tgk8o51oa7g7k5b0hm2tljmk4rq3ri.apps.googleusercontent.com_1758205046561.json  client_secret_23619380503-iijgi9qvtovv6cf5l0eiqsjls1l4o9u5.apps.googleusercontent.com_1758210188024.json
finscrap/: asgi.py  settings.py  urls.py  wsgi.py
mega_upload_ready/: MEGA_UPLOAD_INSTRUCTIONS.txt  moneycontrol_news_20250921_095007.csv  moneycontrol_news_data.csv
newscraper/: admin.py  google_sheets_service.py  mega_csv_storage_service.py  mega_manual_upload_service.py  mega_rclone_storage_service.py  mega_sdk_storage_service.py  mega_storage_service.py  models.py  s3_storage_service.py  sheets_config.py  simple_file_storage_service.py  urls.py  views.py
newscraper/management/commands/: create_admin_user.py  schedule_daily_scraping.py  scrape_all.py  scrape_all_sources.py  scrape_financialexpress.py  scrape_livemint.py  scrape_moneycontrol.py  scrape_youtube.py  setup_google_auth.py
newscraper/migrations/: 0001_initial.py  0002_youtubescrapingjob.py
newscraper/templates/newscraper/: dashboard.html  login.html  (+7 more)
scripts/: daily_scraper.py
